--add-opens to functional tests