@@ -77,6 +77,7 @@ task smoke(type: Test) {
 task functional(type: Test) {
   description = 'Executes functional tests against an the CCD Case Print Service API instance just deployed'
   setTestClassesDirs(sourceSets.aat.output.classesDirs)
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 
   doFirst {
     generateCucumberReports.enabled = true
